--- a/css/web_style.css
+++ b/css/web_style.css
@@ -86,6 +86,7 @@ border: 4px solid black;
 .ab-border{
 	border-style: solid;
 	border-color: black;
+	
 }
 /* start of attributes */
 .container2 {
@@ -98,10 +99,15 @@ border: 4px solid black;
 
 
 }
-
 .card-img-top-vis{
-	padding-left: 90px;
+	
+	padding-left: 100px;
+	position: static;
+}
 
+.space{
+	padding-left: 25%;
+	padding-right: 25%;
 }
 
 	
