--- a/css/web_style.css
+++ b/css/web_style.css
@@ -129,3 +129,7 @@ border: 4px solid black;
 .card-title{
 	padding-top: 10px;
 }
+h5{
+	text-decoration: underline;
+	text-decoration-color: black;
+}
