--- a/css/web_style.css
+++ b/css/web_style.css
@@ -1,8 +1,9 @@
 /*container background image*/
 .container-fluid {
-	background:linear-gradient(rgba(145, 145, 145, 0.6), rgba(145, 145, 145, 0.6)),url(../img/apple-code-coding-574069.jpg);
+	background:linear-gradient(rgba(145, 145, 145, 0.6), rgba(145, 145, 145, 0.6)),url(../img/code-coding2-computer-574073.jpg);
 	background-size: cover;
 	height:920px;
+	width: 100%;
 
 
 	}
@@ -90,15 +91,19 @@ border: 4px solid black;
 	
 	
 }
-#attributes
-{
-	padding-bottom: 50px;
+
+#am{
+	padding-top: 50px;
+	padding-bottom: 100px;
+
 }
 #att{
 	padding-top: 50px;
 	padding-bottom: 100px;
 	background-color:#efefef;
 }
+#attributes{
+	
 /* start of attributes */
 .container2 {
 	height:700px
@@ -133,3 +138,21 @@ h5{
 	text-decoration: underline;
 	text-decoration-color: black;
 }
+hr{
+	border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+
+}
+
+#port{
+	padding-top: 50px;
+	padding-bottom: 100px;
+}
+.footer
+  {
+   background-color:#efefef;
+   position:fixed;
+   bottom:0;
+   height:2%;
+  }
