--- a/css/web_style.css
+++ b/css/web_style.css
@@ -1,9 +1,9 @@
 /*container background image*/
-.container-fluid {
+.container-head {
 	background:linear-gradient(rgba(145, 145, 145, 0.6), rgba(145, 145, 145, 0.6)),url(../img/code-coding2-computer-574073.jpg);
 	background-size: cover;
-	height:920px;
 	width: 100%;
+	height: 920px;
 
 
 	}
@@ -102,12 +102,10 @@ border: 4px solid black;
 	padding-bottom: 100px;
 	background-color:#efefef;
 }
-#attributes{
-	
+
+
 /* start of attributes */
-.container2 {
-	height:700px
-}
+
 .wrapper{
 	max-width:400px;
 	margin-left: auto;
