--- a/css/web_style.css
+++ b/css/web_style.css
@@ -1,14 +1,18 @@
 /*container background image*/
-.container-head {
+
+.container-header{
 	background:linear-gradient(rgba(145, 145, 145, 0.6), rgba(145, 145, 145, 0.6)),url(../img/code-coding2-computer-574073.jpg);
 	background-size: cover;
+	background-position: center center; 
 	width: 100%;
-	height: 920px;
-
-
-	}
 
 }
+.lead-title{
+	padding-top: 50px;
+	padding-bottom: 400px;
+}
+
+
 /*nav bar font change*/ 
 .navbar-brand{
 	color:#C0392B ;
