--- a/css/web_style.css
+++ b/css/web_style.css
@@ -7,6 +7,10 @@
 	width: 100%;
 
 }
+.navbar-toggler-icon{
+	 background-color:  #66FCF1;
+
+}
 .lead-title{
 	padding-top: 50px;
 	padding-bottom: 400px;
@@ -24,7 +28,7 @@
 h1 {
 	padding-top:320px;
 	font-family:'IBM Plex Sans', sans-serif;
-	color: #fff ;
+	color: #fff;
 	font-weight:bold;
 	text-transform:uppercase;
 	text-shadow: black 0.5em 0.5em 0.5em;
@@ -33,7 +37,7 @@ h1 {
  /* -- text under h2 --*/
 .lead {
 	font-weight: 800;
-	color: white;
+	color: #fff;
     text-shadow: black 0.5em 0.5em 0.5em;
 }
 /*-- ABOUT ME HEADING --*/
@@ -49,9 +53,7 @@ h3 {
 /*-- ABOUT ME CONTAINER BOX --*/
 
 .container { 
-	background-color: white;
-	
-     width: 100%;
+	width: 100%;
 }
 
 .styling {
@@ -98,7 +100,6 @@ border: 4px solid black;
 
 #am{
 	padding-top: 50px;
-	padding-bottom: 100px;
 
 }
 #att{
@@ -147,15 +148,15 @@ hr{
 
 }
 
-#port{
+#proj{
 	padding-top: 50px;
 	padding-bottom: 100px;
 }
+
 footer
   {
   	font-family:  'Josefin Sans', sans-serif;
 	font-family: 'IBM Plex Sans', sans-serif;
-   background-color:#efefef;
-   height:5%;
+   background-color:#F5F7F4;
    text-align: center;
   }
