--- a/css/web_style.css
+++ b/css/web_style.css
@@ -102,7 +102,7 @@ border: 4px solid black;
 	padding-top: 50px;
 
 }
-#att{
+#skills{
 	padding-top: 50px;
 	padding-bottom: 100px;
 	background-color:#efefef;
